fix(cdk): `Dialog` fix jumping to top on closing (#7256)

--- a/projects/cdk/components/dialog-host/dialog-host.style.less
+++ b/projects/cdk/components/dialog-host/dialog-host.style.less
@@ -29,9 +29,7 @@
 
     &::-webkit-scrollbar,
     &::-webkit-scrollbar-thumb {
-        background: transparent;
-        width: 0;
-        height: 0;
+        display: none;
     }
 }
 
